--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html />
+<html lang="en">
 	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equip="X-UA-Compatible" content="ie-edge" />
 	</head>
 	<body>
 		{% if latest_question_list %}
